Fix: Ripples in rounded-corner parents not clipped
...in earlier browser versions (Chrome 56 specifically). A z-index value
was enough to fix this.

--- a/ripple.css
+++ b/ripple.css
@@ -1,5 +1,6 @@
 .circles{
 	position: absolute;
+    z-index: 1;
 	top: 0; left: 0;
 	bottom: 0; right: 0;
 
